<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2020 Mica Technologies
  ~
  ~ This program is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty
  ~ of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- APPLICATION/ARTIFACT INFORMATION -->
    <groupId>com.micatechnologies.minecraft</groupId>
    <artifactId>launcher</artifactId>
    <version>2022.1</version>
    <name>Mica Minecraft Launcher</name>
    <packaging>jar</packaging>

    <!-- PROJECT AND CUSTOM PROPERTIES -->
    <properties>
        <main.class>com.micatechnologies.minecraft.launcher.LauncherCore</main.class>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
        <dependency.locations.enabled>false</dependency.locations.enabled>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>19</javafx.version>
        <jdk.version>19+37</jdk.version>
        <jfxtaskbarprogressbar.export>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
        </jfxtaskbarprogressbar.export>
    </properties>

    <!-- SPECIFIED REPOSITORIES FOR DEPENDENCIES -->
    <repositories>
        <!-- JCenter REPO -->
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
            <name>jcenter-bintray</name>
        </repository>

        <!-- GitHub BASED MAVEN REPOS -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <!-- Minecraft Authenticator MAVEN REPO -->
        <repository>
            <id>repo.u-team.info</id>
            <url>https://repo.u-team.info</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!-- CLEANUP UNWANTED FILES AND BINARIES -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>target</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>packaging</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- SET APP VERSION AND NAME CONSTANTS -->
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>replace-version-number</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>
                            ${project.basedir}${file.separator}src${file.separator}main${file.separator}java${file.separator}com${file.separator}micatechnologies${file.separator}minecraft${file.separator}launcher${file.separator}consts${file.separator}LauncherConstants.java
                        </include>
                    </includes>
                    <replacements>
                        <replacement>
                            <token>LAUNCHER_APPLICATION_NAME = ".*"</token>
                            <value>LAUNCHER_APPLICATION_NAME = "${project.name}"</value>
                        </replacement>
                        <replacement>
                            <token>LAUNCHER_APPLICATION_VERSION = ".*"</token>
                            <value>LAUNCHER_APPLICATION_VERSION = "${project.version}"</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>

            <!-- COMPILE CODE -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>${jfxtaskbarprogressbar.export}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- ASSEMBLE JAR WITH DEPENDENCIES -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${main.class}</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- DOWNLOAD JAVA RUNTIME -->
            <plugin>
                <groupId>com.igormaznitsa</groupId>
                <artifactId>mvn-jlink-wrapper</artifactId>
                <version>1.0.5</version>
                <executions>
                    <!-- CACHE JDK -->
                    <execution>
                        <id>cache-jdk</id>
                        <goals>
                            <goal>cache-jdk</goal>
                        </goals>
                        <configuration>
                            <provider>BELLSOFT</provider>
                            <providerConfig>
                                <type>jdk</type>
                                <version>${jdk.version}</version>
                                <arch>amd64-full</arch>
                            </providerConfig>
                            <jdkCachePath>${project.basedir}${file.separator}jdk</jdkCachePath>
                            <jdkPathProperty>jlink.jdk.path</jdkPathProperty>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.7</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <bundleJre>true</bundleJre>
                    <customizedJre>false</customizedJre>
                    <jreMinVersion>16</jreMinVersion>
                    <generateInstaller>true</generateInstaller>
                    <licenseFile>${project.basedir}${file.separator}LICENSE</licenseFile>
                    <runnableJar>
                        ${project.build.directory}${file.separator}${project.artifactId}-${project.version}-jar-with-dependencies.jar
                    </runnableJar>
                    <copyDependencies>false</copyDependencies>
                    <outputDirectory>${project.basedir}${file.separator}packaging</outputDirectory>
                    <!--suppress UnresolvedMavenProperty -->
                    <jdkPath>${jlink.jdk.path}</jdkPath>
                    <additionalResources>
                        <additionalResource>
                            ${project.basedir}${file.separator}src${file.separator}main${file.separator}resources
                        </additionalResource>
                    </additionalResources>
                    <macConfig>
                        <entitlements>
                            ${project.basedir}${file.separator}assets${file.separator}mac${file.separator}micaforgelauncher.entitlements
                        </entitlements>
                        <macStartup>UNIVERSAL</macStartup>
                        <codesignApp>false</codesignApp>
                    </macConfig>
                    <vmArgs>
                        <vmArg>${jfxtaskbarprogressbar.export}</vmArg>
                    </vmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>bundling</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.rauschig</groupId>
            <artifactId>jarchivelib</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.32</version>
        </dependency>
        <dependency>
            <groupId>io.github.CDAGaming</groupId>
            <artifactId>DiscordIPC</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.Dansoftowner</groupId>
            <artifactId>jSystemThemeDetector</artifactId>
            <version>3.6</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.13.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>5.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>net.hycrafthd</groupId>
            <artifactId>minecraft_authenticator</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.Dansoftowner</groupId>
            <artifactId>FXTaskbarProgressBar</artifactId>
            <version>v11.4</version>
        </dependency>
    </dependencies>
</project>
